testdata/invalid/internal/orchestration/bad_orchestrator.go
package orchestration

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/user/core/model"
